// awesome.proto
syntax = "proto3";
package awesomepackage;

message AwesomeMessage {
  string awesomeField = 1; // becomes awesome_field awesomeField
  string deviceName = 2;
}